--- a/src/app/componentes/educacion/educacion.component.html
+++ b/src/app/componentes/educacion/educacion.component.html
@@ -5,33 +5,27 @@
             <button class="btn btn-primary" routerLink="/nuevaedu" *ngIf="isLogged">Agregar Educacion</button>
         </div>
         <div class="col-lg-11 mt-4">
-            <table class="table">
-                <tbody>
-                    <tr *ngFor="let Educacion of educacion">
-                        <div class="card-xp row featurette border border-dark mb-3 rounded">
-                            <div class="col-md-3">
-                                <img class="img-fluid border border-dark" src="{{Educacion.imgE}}" alt="">
-                                </div>
-                                <div class="col-md-9">
-                            <td>
-                                <h2 class="mt-3 me-2">{{Educacion.nombreE}}: </h2>
-                            </td>
-                            <td>
-                                <p>{{Educacion.descripcionE}}</p>
-                            </td>
-                            <div>
-                                <td *ngIf="isLogged"><button type="button" class="btn btn-info me-3"
-                                        routerLink="/editedu/{{Educacion.id}}"><i
-                                            class="bi bi-pencil-fill"></i>EDITAR</button></td>
-                                <td *ngIf="isLogged"><button type="button" class="btn btn-danger"
-                                        (click)="delete(Educacion.id)"><i class="bi bi-trash-fill"></i>BORRAR</button>
-                                </td>
-                            </div>
-                        </div>
-                        </div>
-                    </tr>
-                </tbody>
-            </table>
+            <div class="card-xp row featurette border border-dark mb-3 rounded" *ngFor="let Educacion of educacion">
+                <div class="col-md-3">
+                    <img class="img-fluid border border-dark" src="{{Educacion.imgE}}" alt="">
+                </div>
+                <div class="col-md-9">
+                    <div>
+                        <h2 class="mt-3 me-2">{{Educacion.nombreE}}: </h2>
+                    </div>
+                    <div>
+                        <p class="lead">{{Educacion.descripcionE}}</p>
+                    </div>
+                    <div>
+                        <td *ngIf="isLogged"><button type="button" class="btn btn-info me-3"
+                                routerLink="/editedu/{{Educacion.id}}"><i class="bi bi-pencil-fill"></i>EDITAR</button>
+                        </td>
+                        <td *ngIf="isLogged"><button type="button" class="btn btn-danger"
+                                (click)="delete(Educacion.id)"><i class="bi bi-trash-fill"></i>BORRAR</button>
+                        </td>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
